# ai_engineer_projects

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  db_create_runner.py  main.py  pyproject.toml  run_crew.py
reports/: relatorio_srag_20251114_143614.md  relatorio_srag_20251115_040328.md  relatorio_srag_20251115_041005.md
src/: crew_core.py
src/agents/: data_agent.py  news_agent.py  report_agent.py
src/notebooks/EDA/: srad2025.ipynb  srag2025.ipynb
src/tools/: sql_tool.py
src/utils/: clear_data.py  db_utils.py  eda_utils.py  get_data.py
